Change tab bar item from settings to more.

--- a/Depoza/ru.lproj/Main.strings
+++ b/Depoza/ru.lproj/Main.strings
@@ -15,7 +15,7 @@
 "4gu-5P-d8u.title" = "Добавить";
 
 /* Class = "UINavigationItem"; title = "Настройки"; ObjectID = "6oE-Pz-2cz"; */
-"6oE-Pz-2cz.title" = "Настройки";
+"6oE-Pz-2cz.title" = "Еще";
 
 /* Class = "UILabel"; text = "Start/End date"; ObjectID = "7GL-8S-cde"; */
 "7GL-8S-cde.text" = "Start/End date";
